fixed the spacing issues for the table

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,7 +8,6 @@
     color:#757e8d;
 }
 .btn {
-    font-weight:600;
     color:#fff;
     font-size:smaller;
 }
